fix: html structure

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hashtable Library in C</title>
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="./logo.avif" type="image/x-icon">
+    <link rel="stylesheet" href="./bonus/styles.css">
+    <link rel="shortcut icon" href="./bonus/logo.avif" type="image/x-icon">
 </head>
 <body>
     <div class="container">
